--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        lab: [lab1, lab2] 
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-   
     - name: Install dependencies
       run: |
         sudo apt-get clean
