--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(oop_labs)
+cmake_policy(SET CMP0135 NEW)
 
 add_subdirectory(lab1)
 add_subdirectory(lab2)
@@ -7,3 +8,4 @@ add_subdirectory(lab3)
 add_subdirectory(lab4)
 add_subdirectory(lab5)
 add_subdirectory(lab6)
+add_subdirectory(lab7)
