--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        lab: [lab1, lab2, lab3, lab4, lab5, Lab6, lab7] 
+        lab: [lab7] 
 
     steps:
     - name: Checkout code
